--- a/CV.html
+++ b/CV.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<head>
-    <title>Curriculum Vitae</title>
-    <body bgcolor="#F2F2F2" text="#1C1C1C">
-</head>
-<body id="body" style="display: block;position:relative; margin:auto; text-align:left; font-family: 'Segoe UI', 'Segoe Light', 'Segoe UI Light', Segoe, Arial, sans-serif; ">
-	<div style="background-color:#000000; height:56px; display: block;color: #FFFFFF; text-align: left;">
-		<center><div style="padding: 11px 20px;font-size: 30px;">Guzmán Jiménez Daniel Enrique ~ CV</div></center>
-	</div><br>
-	<hr style="border-color: red;"><br>
-	<div style="font-size:22px; padding:15px 80px;">
+<html>
+	
+	<head>
+		<title>Curriculum Vitae</title>
+		<meta charset='UTF-8'/>
+		<link  rel='stylesheet' href='css/resources.css'/>
+		<link  rel='stylesheet' href='css/textures.css'/>
+	</head>
+
+	<body id="standard">
+		<div class="box-top">Guzman Jimenez Daniel Enrique ~ CV</div>
+			<br>
+		<center><div id="menu">
+			<div id="m1"><a href="deportes.html"><img src="resources/deportes.png" /></a></div>
+			<div id="m2"><a href="index.html"><img src="resources/home.png" /></a></div>
+			<div id="m3"><a href="cine.html"><img src="resources/cine.png" /></a></div>
+		</div></center><br>
+		<hr style="border-color: red;"><br>
+		<div style="font-size:22px; padding:15px 80px;">
 		<b>Personal Information</b><br>
 		<font face="monospace"><div style="font-size:18px;">
 			<ul>
-				<li>Full Name: Guzmán Jiménez Daniel Enrique</li>
+				<li>Full Name: Guzman Jimenez Daniel Enrique</li>
 				<li>Birthday: 4-March-1998</li>
-				<li>Birth place: Huajuapan de León, Oaxaca</li>
+				<li>Birth place: Huajuapan de Leon, Oaxaca</li>
 				<li>Email: danielholosguzman@gmail.com</li>
 				<li>Phone number: 9531890750</li>
 			</ul>
@@ -38,21 +47,21 @@
 		<font face="monospace"><div style="font-size:18px; padding:0px 25px;">
 			<dl>
 				<dt>Structured programming</dt>
-				<dd>C: 80%</dd>
+					<dd>C: 80%</dd>
 				<dt>Object-oriented programming</dt>
-				<dd>C++: 70%</dd>
-				<dd>Python: 40%</dd>
-				<dd>Java: 60%</dd>
-				<dd>C#: 70%</dd>
+					<dd>C++: 70%</dd>
+					<dd>Python: 40%</dd>
+					<dd>Java: 60%</dd>
+					<dd>C#: 70%</dd>
 				<dt>Low level programming</dt>
-				<dd>Assambler using MASM: 70%</dd>
+					<dd>Assambler using MASM: 70%</dd>
 				<dt>Web programming</dt>
-				<dd>HTML: 80%</dd>
-				<dd>PHP: 60%</dd>
-				<dd>SQL: 70%</dd>
-				<dd>CSS: 60%</dd>
+					<dd>HTML: 80%</dd>
+					<dd>PHP: 60%</dd>
+					<dd>SQL: 70%</dd>
+					<dd>CSS: 60%</dd>
 				<dt>Embedded Systems Programming</dt>
-				<dd>VHDL: 70%</dd>
+					<dd>VHDL: 70%</dd>
 			</dl>
 		</div></font>
 		<hr style="border-color:black;"><br>
@@ -60,14 +69,16 @@
 		<font face="monospace"><div style="font-size:18px; padding:0px 25px;">
 			<dl>
 				<dt>Emulator for a game server</dt>
-				<dd>Emulator developed in C # for web animations</dd>
+					<dd>Emulator developed in C# for web animations</dd>
 				<dt>Elementary Pentesting Knowledge</dt>
-				<dd>Denial of service attacks (DDoS)</dd>
-				<dd>Social Engineering: Facebook pishing, Gmail pishing</dd>
-				<dd>Social Engineering: Advanced use of payloads and exploits (meterpreter)</dd>
-				<dd>Brute Force: Hydra</dd>
+					<dd>Denial of service attacks (DDoS)</dd>
+					<dd>Social Engineering: Facebook pishing, Gmail pishing</dd>
+					<dd>Social Engineering: Advanced use of payloads and exploits (meterpreter)</dd>
+					<dd>Brute Force: Hydra</dd>
 			<dl>
 		</div></font>
+		<hr style="border-color:black;"><br>
 	</div>
 </body>
+
 </html>
