--- a/deportes.html
+++ b/deportes.html
@@ -2,39 +2,39 @@
 <html>
 	
 	<head>
-		<title>Curriculum Vitae</title>
+		<title>Top Sport</title>
 		<meta charset='UTF-8'/>
 		<link rel='stylesheet' href='css/resources.css'/> 
 		<link rel='stylesheet' href='css/textures.css'/>
 	</head>
 	
 	<body id="standard">
-		<div class="box-top">Mis deportes favoritos</div><br>
-		<center>
-			<div id="menu">
-				<div id="m4"><a href="CV.html"><img src="resources/curriculum.png" /></a></div>
-				<div id="m2"><a href="index.html"><img src="resources/home.png" /></a></div>
-				<div id="m3"><a href="cine.html"><img src="resources/cine.png" /></a></div>
-			</div><br>
-			<div id="caja">
-				<div id="c1">
-					<h1>Futbol soccer</h1>
-					<img src="resources/futbol.png" width="250" />
-				</div>
-				<div id="c2">
-					<h1>Baseball</h1>
-					<img src="resources/baseball.png" width="200"/>
-				</div>
-				<div id="c3">
-					<h1>Futbol americano</h1>
-					<img src="resources/americano.png" width="300"/>
-				</div>
-				<div id="c4">
-					<h1>Artes marciales mixtas</h1>
-					<img src="resources/artes.png" width="300"/>
-				</div>
+		<div class="box-top">Top Sports</div><br>
+		<div id="menu">
+			<div id="m4"><a href="CV.html"><img src="resources/curriculum.png" /></a></div>
+			<div id="m2"><a href="index.html"><img src="resources/home.png" /></a></div>
+			<div id="m3"><a href="cine.html"><img src="resources/cine.png" /></a></div>
+		</div><br>
+		<div id="caja">
+			<center>
+			<div id="c1">
+				<h1>Futbol soccer</h1>
+				<img src="resources/futbol.png" width="250" />
 			</div>
-		</center>
+			<div id="c1">
+				<h1>Baseball</h1>
+				<img src="resources/baseball.png" width="200"/>
+			</div>
+			<div id="c1">
+				<h1>Futbol americano</h1>
+				<img src="resources/americano.png" width="300"/>
+			</div>
+			<div id="c1">
+				<h1>Artes marciales mixtas</h1>
+				<img src="resources/artes.png" width="300"/>
+			</div>
+			</center>
+		</div>
 	</body>
 	
 </html>
