--- a/deportes.html
+++ b/deportes.html
@@ -1,40 +1,39 @@
-<!DOCTYPE html>
-<html>
-	
+<!doctype html>
+<html xml:lang="es" lang="es">
 	<head>
-		<title>Curriculum Vitae</title>
-		<meta charset='UTF-8'/>
-		<link rel='stylesheet' href='css/resources.css'/> 
-		<link rel='stylesheet' href='css/textures.css'/>
+		<title>Deportes</title>
+		<link rel='stylesheet' href='css/deportes_cine_styles.css'>
+		<link rel='stylesheet' href='css/styles.css'>
+		<meta name='Viewport' content='width=device-width, initial-scale=1.0, maximun-scale=1.0'/>
 	</head>
-	
-	<body id="standard">
-		<div class="box-top">Mis deportes favoritos</div><br>
-		<center>
-			<div id="menu">
-				<div id="m4"><a href="CV.html"><img src="resources/curriculum.png" /></a></div>
-				<div id="m2"><a href="index.html"><img src="resources/home.png" /></a></div>
-				<div id="m3"><a href="cine.html"><img src="resources/cine.png" /></a></div>
-			</div><br>
-			<div id="caja">
-				<div id="c1">
-					<h1>Futbol soccer</h1>
-					<img src="resources/futbol.png" width="250" />
-				</div>
-				<div id="c2">
-					<h1>Baseball</h1>
-					<img src="resources/baseball.png" width="200"/>
-				</div>
-				<div id="c3">
-					<h1>Futbol americano</h1>
-					<img src="resources/americano.png" width="300"/>
-				</div>
-				<div id="c4">
-					<h1>Artes marciales mixtas</h1>
-					<img src="resources/artes.png" width="300"/>
-				</div>
+	<body class="bg">
+		<div class="header">
+			<img class="logo" src='resources/logo.png'/>
+			<ul class='menu'>
+				<li><a href='index.html' class="sh">Index</a></li>
+				<li><a href='curriculum.html' class="sh">Curriculum</a></li>
+				<li><a href='deportes.html' class="sh">Deportes</a></li>
+				<li><a href='cine.html' class="sh">Cine</a></li>
+			</ul>
+		</div>
+		<div class="contenedor">
+			<div class="cg">
+				<h1>Futbol soccer</h1>
+				<img src="resources/futbol.png" />
 			</div>
-		</center>
+			<div class="cg">
+				<h1>Baseball</h1>
+				<img src="resources/baseball.png" />
+			</div>
+			<div class="cg">
+				<h1>Futbol americano</h1>
+				<img src="resources/americano.png" />
+			</div>
+			<div class="cg">
+				<h1>Artes marciales mixtas</h1>
+				<img src="resources/artes.png" />
+			</div>
+		</div>
 	</body>
-	
 </html>
+
