--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
-<html>
-	
+<!doctype html>
+<html xml:lang="es" lang="es">
 	<head>
 		<title>Bienvenid@</title>
-		<link rel='stylesheet' href='css/resources.css'/> 
-		<link rel='stylesheet' href='css/textures.css'/>
+		<link rel='stylesheet' href='css/index_styles.css'>
+		<link rel='stylesheet' href='css/styles.css'>
 	</head>
-
-	<body id="index">
-		<div class="box-top">&iexcl; Bienvenid@s !</div>
-		<a href="CV.html"><div class="box-white" align="center"><img src="resources/curriculum_grande.png"/></div></a>
+	<body class="bg">
+		<div class="contenedor">
+			<div class="generic">
+				<a href="curriculum.html"><img src="resources/curriculum_grande.png"/></a>
+			</div>
+			<div class="generic">
+				<a href="deportes.html"><img src="resources/deportes_grande.png"/></a>
+			</div>
+			<div class="generic">
+				<a href="cine.html"><img src="resources/cine_grande.png"/></a>
+			</div>
+		</div>
 	</body>
-
 </html>
