--- a/cine.html
+++ b/cine.html
@@ -1,40 +1,39 @@
-<!DOCTYPE html>
-<html>
-	
+<!doctype html>
+<html xml:lang="es" lang="es">
 	<head>
-		<title>Curriculum Vitae</title>
-		<meta charset='UTF-8'/>
-		<link rel='stylesheet' href='css/resources.css'/> 
-		<link rel='stylesheet' href='css/textures.css'/>
+		<title>Curriculum</title>
+		<link rel='stylesheet' href='css/deportes_cine_styles.css'>
+		<link rel='stylesheet' href='css/styles.css'>
+		<meta name='Viewport' content='width=device-width, initial-scale=1.0, maximun-scale=1.0'/>
 	</head>
-
-	<body id="standard">
-		<div class="box-top">Mis peliculas favoritas</div><br>
-		<center>
-			<div id="menu2">
-				<div id="m4"><a href="CV.html"><img src="resources/curriculum.png" /></a></div>
-				<div id="m2"><a href="index.html"><img src="resources/home.png" /></a></div>
-				<div id="m1"><a href="deportes.html"><img src="resources/deportes.png" /></a></div>
-			</div><br>
-			<div id="caja">
-				<div id="c1">
-					<a href="http://bajalogratis.com/descargar-el-senor-de-los-anillos-latino.html" target="_blank"><h1>El Señor de los Anillos I</h1></a>
-					<iframe width="320" height="250" src="https://www.youtube.com/embed/3GJp6p_mgPo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-				<div id="c2">
-					<a href="http://bajalogratis.com/descargar-el-padrino-latino.html" target="_blank"><h1>The Godfather</h1></a>
-					<iframe width="320" height="250" src="https://www.youtube.com/embed/gCVj1LeYnsc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-				<div id="c3">
-					<a href="http://bajalogratis.com/descargar-el-infierno-latino.html" target="_blank"><h1>El infierno</h1></a>
-					<iframe width="320" height="250" src="https://www.youtube.com/watch?v=cDLLX9joYv0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-				<div id="c4">
-					<a href="http://bajalogratis.com/descargar-perfume-historia-de-un-asesino-latino.html" target="_blank"><h1>Perfume</h1></a>
-					<iframe width="320" height="250" src="https://www.youtube.com/watch?v=6PnNQu3SdGo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
+	<body class="bg">
+		<div class="header">
+			<img class="logo" src='resources/logo.png'/>
+			<ul class='menu'>
+				<li><a href='index.html' class="sh">Index</a></li>
+				<li><a href='curriculum.html' class="sh">Curriculum</a></li>
+				<li><a href='deportes.html' class="sh">Deportes</a></li>
+				<li><a href='cine.html' class="sh">Cine</a></li>
+			</ul>
+		</div>
+		<div class="contenedor">
+			<div class="cg">
+				<a href="http://bajalogratis.com/descargar-el-senor-de-los-anillos-latino.html" target="_blank"><h1>The Lord of the Rings I</h1></a>
+				<video class="video" src="resources/anillos.mp4" controls></video>
 			</div>
-		</center>
+			<div class="cg">
+				<a href="http://bajalogratis.com/descargar-el-padrino-latino.html" target="_blank"><h1>The Godfather</h1></a>
+				<video class="video" src="resources/padrino.mp4" controls></video>
+			</div>
+			<div class="cg">
+				<a href="http://bajalogratis.com/descargar-el-infierno-latino.html" target="_blank"><h1>El infierno</h1></a>
+				<video class="video" src="resources/infierno.mp4" controls></video>
+			</div>
+			<div class="cg">
+				<a href="http://bajalogratis.com/descargar-perfume-historia-de-un-asesino-latino.html" target="_blank"><h1>Fragance</h1></a>
+				<video class="video" src="resources/perfume.mp4" controls></video>
+			</div>
+		</div>
 	</body>
-
 </html>
+
